changes from feedback sprint 3 presentation

--- a/scss/main.css
+++ b/scss/main.css
@@ -21,6 +21,11 @@ html[data-theme='dark'] {
   --socialbartxt: #28303D;
 }
 
+
+html, body * {
+    font-family: 'Roboto', sans-serif;
+}
+
 .slick-track {
 /*  background-color: red;*/
 
@@ -73,12 +78,10 @@ padding-bottom: 50px;
 
 .slick-prev:before {
     font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f104";
-
 }
 
 .slick-next:before {
     font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f105";
-
 }
 
 .slick-prev:before, .slick-next:before {
@@ -87,6 +90,7 @@ padding-bottom: 50px;
   color: var(--lightFooterBg);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: #DE6666;
 }
 
 .portrait_title {
@@ -94,7 +98,8 @@ padding-bottom: 50px;
 }
 
 .menuTXT {
-  color: white;
+	color: white;
+	font-size: 1.4rem;
 }
 
 .navigation {
@@ -142,9 +147,13 @@ padding-bottom: 50px;
   color: #F9F9F9;
 }
 
+ul.menu .current_page_item a {
+	color: #DE6666;
+}
+
 .navigation .col-md-4:nth-of-type(2) {
   text-align: center;
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .navigation .col-md-4 .menu ul li:first-of-type {
@@ -271,6 +280,10 @@ padding-bottom: 50px;
   transform: translate3d(0, -20px, 0) rotate(-90deg);
 }
 
+.header-image {
+	padding: 0;
+}
+
 .landing-header {
   height: 100vh;
   margin-top: 0 !important;
@@ -328,7 +341,9 @@ height: auto;
 }
 
 .row.no-margin > div {
-  margin: 0 auto;
+	margin: 0 auto;
+	margin-left: 0;
+	padding-left: 0;
 }
 
 .landing-header .on-scroll {
@@ -426,7 +441,7 @@ height: auto;
 }
 
 .about .about-text .content button {
-  background-color: indianred;
+  background-color: #DE6666;
   color: var(--lightColor);
   font-size: 18px;
   padding: 20px 0;
@@ -486,7 +501,7 @@ height: auto;
 }
 
 .contact {
-  background-color: indianred;
+  background-color: #DE6666;
   color: white;
   font-size: 18px;
   padding: 20px 0;
@@ -592,6 +607,12 @@ h3 {
   font-size: 1.5em;
   font-weight: 500;
   padding-bottom: 15px;
+}
+
+footer .CTA_footer {
+    font-size: 1.4rem;
+    color: #DE6666;
+    
 }
 
 
@@ -783,7 +804,7 @@ a:hover {
 
 html,
 body {
-  font-family: sans-serif;
+ font-family: 'Roboto', sans-serif;
   padding: 0;
   margin: 0 !important;
   overflow-x: hidden;
@@ -828,7 +849,7 @@ h2:before {
   content: "";
   display: inline-block;
   width: 8%;
-  border-bottom: 5px solid indianred;
+  border-bottom: 5px solid #DE6666;
   margin: 0 5px 5px 0;
 }
 
@@ -836,7 +857,7 @@ h4:before {
   content: "";
   display: inline-block;
   width: 10%;
-  border-bottom: 3px solid indianred;
+  border-bottom: 3px solid #DE6666;
   margin: 0 5px 5px 0;
 }
 
@@ -904,6 +925,7 @@ h4:before {
 
 hr {
   width: 80%;
+  color: #DE6666;
 }
 
 .content-h2 {
@@ -1008,13 +1030,15 @@ p {
 
 .menu-center a {
   /*  background-color: red;*/
-  padding-bottom: 25%;
+  padding-bottom: 25px;
 }
 
 .menu-contact {
-  position: absolute;
-  bottom: 0;
-  text-align: right;
+	position: absolute;
+	text-align: right;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
 
 .contact-kvk {
@@ -1179,7 +1203,7 @@ textarea {
   content: "";
   display: inline-block;
   width: 5%;
-  border-bottom: 3px solid indianred;
+  border-bottom: 3px solid #DE6666;
   margin: 0 5px 5px 0;
 }
 
@@ -1226,15 +1250,24 @@ textarea {
 }
 
 @media only screen and (max-width: 767px) {
+    
+    .padding {
+	width: 100%;
+	padding-right: unset;
+	padding-left: unset;
+	margin-right: unset;
+	margin-left: unset;
+}
+    
+    .padding-left {
+	padding: 0 15px;
+}
+    
   .contact-kvk {
     display: none;
   }
   .center-mobile {
     text-align: center;
-  }
-  .padding-left {
-    padding-right: 15%;
-    padding-left: 15%;
   }
 
 
@@ -1260,12 +1293,15 @@ textarea {
   .landing-image {
     height: 40vh;
   }
-  .logo {
-    display: none;
-  }
+ .logo {
+	margin: auto;
+}
   .row-mobile {
     margin-top: 40px;
   }
+    .row {
+	margin: 15px 0 !important;
+}
   .row-margin2 {
     margin-top: 0px;
   }
@@ -1289,18 +1325,19 @@ textarea {
   }
   .menu-center a {
     padding-bottom: 0;
-    padding: 10% 0;
+    padding: 7% 0;
   }
-  .icon-bar {
-    display: none;
-  }
-
+ 
   .mobile-down {
     margin-top: 50px;
   }
   .margin-bottom-section {
     margin-bottom: 0px !important;
   }
+    
+  .margin-top2 {
+	padding-top: 0;
+}
   .portrait_desc {
     padding-right: 0px;
     position: relative;
